--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,438 @@
+$font-stack: Arial, Hevetica, sans-serif;
+$light-color: #ffff;
+$primary-color: #165B33;
+$secondary-color: #d00000;
+$thirdary-color: #F8B229;
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: $primary-color;
+  font-family: $font-stack;
+  line-height: 1.6;
+}
+
+textarea {
+	background-color: #f6e6b4;
+	color: #d00000;
+	padding: 1em;
+	font-family: Comic sans-serif;
+  font-size: large;
+	border-radius: 10px;
+  border: 2px solid transparent;
+  outline: none;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}  
+
+.to {
+  color: #d00000;
+}
+
+.toSanta {
+  width: 290px;
+}  
+
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}  
+
+.row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}  
+
+.btnwrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+
 h1 {
-  color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: $light-color;
   font-size: 60px;
+}
+
+h5 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: $secondary-color;
+  font-size: 30px;
+}
+
+.SantaStyle1 {
+  color: $secondary-color;
+}
+
+.SantaStyle2 {
+  color: $thirdary-color;
+}
+
+.SantaButton {
+  background-color: $secondary-color;
+}
+
+//Buttons
+button {
+  display: inline-block;
+  padding: .75rem 1.25rem;
+  border-radius: 10rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .15rem;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $secondary-color;
+    border-radius: 10rem;
+    z-index: -2;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: darken($secondary-color, 15%);
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1;
+  }
+  &:hover {
+    color: #fff;
+    &:before {
+      width: 100%;
+    }
+  }
+}
+
+.submit {
+  display: inline-block;
+  padding: .75rem 1.25rem;
+  border-radius: 10rem;
+  color: $secondary-color;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .15rem;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $secondary-color;
+    border-radius: 10rem;
+    z-index: -2;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: darken($secondary-color, 15%);
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1;
+  }
+  &:hover {
+    color: #fff;
+    &:before {
+      width: 100%;
+    }
+  }
+}
+
+//Santa Stuff
+
+@keyframes moveInBottom {
+  0% {
+      opacity: 0;
+      transform: translateY(30px);
+  }
+
+  100% {
+      opacity: 1;
+      transform: translateY(0px);
+  }
+}
+
+@keyframes mustache-wiggle {
+  0% {
+    transform: rotate(0turn);
+  }
+  25% {
+    transform: rotate(0.02turn) scale(1.1);
+  }
+  50% {
+    transform: rotate(-0.02turn) scale(1.1);
+  }
+  75% {
+    transform: rotate(0.02turn) scale(1.1);
+  }
+  100% {
+    transform: rotate(0turn) scale(1);
+  }
+}
+
+.wrapper {
+  margin: 30vh 0;
+}
+.hat-wrapper {
+  position: absolute;
+  top: -170px;
+}
+.hat {
+  min-width: 400px;
+  height: 200px;
+  background: #d00000;
+  margin: 0 auto;
+  border-radius: 100% 100% 0 0;
+  transform: skew(0, -8deg);
+}
+.hat-top {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 123px 0 0 100px;
+  border-color: transparent transparent transparent #d00000;
+  position: absolute;
+  right: -84px;
+  bottom: -12px;
+  transform: skew(0, 30deg);
+}
+
+.hat-top:before {
+  content: "";
+  display: block;
+  background: white;
+  background: radial-gradient(at top, #ffffff 0%, #e4e4e4 100%);
+  width: 100px;
+  height: 100px;
+  position: relative;
+  top: -50px;
+  margin-left: -50px;
+  border-radius: 100%;
+  transform: skew(0, -23deg);
+}
+.hat-brim {
+  width: 110%;
+  min-width: 400px;
+  height: 80px;
+  border-radius: 40px;
+  background: white;
+  background: radial-gradient(at top, #ffffff 0%, #e4e4e4 100%);
+  margin: 0 auto;
+  position: relative;
+  left: -5%;
+  top: -40px;
+}
+.face {
+  width: 40vw;
+  min-width: 400px;
+  min-height: 400px;
+  max-width: 400px;
+  border-radius: 30% 30% 90% 90%;
+  background: radial-gradient(at 40% top, #f6e6b4 0%, #eaab5d 100%);
+  margin: 0 auto;
+  position: relative;
+}
+.eye {
+  background: black;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 100px;
+  border-radius: 100%;
+  transition: all 0.5s;
+}
+.eye:hover {
+  height: 6px;
+  margin-top: 12px;
+}
+.left-eye {
+  left: 100px;
+}
+.right-eye {
+  right: 100px;
+}
+
+/*******************
+      Beard
+*******************/
+.beard {
+  width: 110%;
+  height: 80%;
+  border-radius: 30% 30% 110% 110%;
+  background: radial-gradient(at top, #ffffff 0%, #e4e4e4 100%);
+  left: -5%;
+  position: absolute;
+  top: 50%;
+}
+.beard:hover .mustache {
+  animation: mustache-wiggle 0.6s 1;
+}
+.mustache {
+  position: absolute;
+  width: 60%;
+  left: 20%;
+  top: -40px;
+  font-size: 0;
+}
+.mustache-left {
+  width: 50%;
+  height: 80px;
+  background: radial-gradient(at top left, #e4e4e4 0%, #ffffff 100%);
+  border-radius: 200% 40% 100%;
+  box-shadow: -2px 6px 8px #e4e4e4;
+  display: inline-block;
+  box-sizing: border-box;
+}
+.mustache-right {
+  width: 50%;
+  height: 80px;
+  background: radial-gradient(at top right, #e4e4e4 0%, #ffffff 100%);
+  border-radius: 40% 200% 40% 100%;
+  box-shadow: 2px 6px 8px #e4e4e4;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+// boarder
+$globe-width:   12px;
+$globe-height:  28px;
+$globe-spacing: 40px;
+$globe-spread: 3px;
+$light-off-opacity: 0.4;
+
+.lightrope {
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+  z-index: 1;
+  margin: -15px 0 0 0;
+  padding: 0;
+  pointer-events: none;
+  width: 100%;
+  li {
+    position: relative;
+    animation-fill-mode: both; 
+    animation-iteration-count:infinite;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: block;
+    width: $globe-width;
+    height: $globe-height;
+    border-radius: 50%;
+    margin: $globe-spacing/2;
+    display: inline-block;
+    background: rgba(0,247,165,1);
+    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,247,165,1);
+    animation-name: flash-1;
+    animation-duration: 2s;
+    &:nth-child(2n+1) {
+      background: rgba(0,255,255,1);
+      box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,255,255,0.5);
+      animation-name: flash-2;
+      animation-duration: 0.4s;
+    }
+    &:nth-child(4n+2) {
+      background: rgba(247,0,148,1);
+      box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(247,0,148,1);
+      animation-name: flash-3;
+      animation-duration: 1.1s;
+    }
+    &:nth-child(odd) {
+      animation-duration: 1.8s;
+    }
+    &:nth-child(3n+1) {
+      animation-duration: 1.4s;
+    }
+    &:before {
+      content: "";
+      position: absolute;
+      background: #222;
+      width: ($globe-width - 2);
+      height: $globe-height/3;
+      border-radius: 3px;
+      top: (0 - ($globe-height/6));
+      left: 1px;
+    }
+    &:after {
+      content: "";
+      top: (0 - $globe-height/2);
+      left: $globe-width - 3;
+      position: absolute;
+      width: $globe-spacing + 12;
+      height: ($globe-height/3 * 2);
+      border-bottom: solid #222 2px;
+      border-radius: 50%;
+    }
+    &:last-child:after {
+      content: none;
+    }
+    &:first-child {
+      margin-left: -$globe-spacing;
+    }
+  }
+}
+@keyframes flash-1 { 
+    0%, 100% { background: rgba(0,247,165,1);
+    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,247,165,1);} 
+    50% { background: rgba(0,247,165,$light-off-opacity);
+    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,247,165,0.2);}
+}
+@keyframes flash-2 { 
+    0%, 100% { background: rgba(0,255,255,1);
+    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,255,255,1);} 
+    50% { background: rgba(0,255,255,$light-off-opacity);
+    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,255,255,0.2);}
+}
+@keyframes flash-3 { 
+    0%, 100% { background: rgba(247,0,148,1);
+    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(247,0,148,1);} 
+    50% { background: rgba(247,0,148,$light-off-opacity);
+    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(247,0,148,0.2);}
 }
