--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,8 @@
 $font-stack: Arial, Hevetica, sans-serif;
 $light-color: #ffff;
-$primary-color: #165B33;
+$primary-color: #165b33;
 $secondary-color: #d00000;
-$thirdary-color: #F8B229;
-
+$thirdary-color: #f8b229;
 
 * {
   box-sizing: border-box;
@@ -18,12 +17,12 @@ body {
 }
 
 textarea {
-	background-color: #f6e6b4;
-	color: #d00000;
-	padding: 1em;
-	font-family: Comic sans-serif;
+  background-color: #f6e6b4;
+  color: #d00000;
+  padding: 1em;
+  font-family: Comic sans-serif;
   font-size: large;
-	border-radius: 10px;
+  border-radius: 10px;
   border: 2px solid transparent;
   outline: none;
 }
@@ -33,7 +32,7 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}  
+}
 
 .to {
   color: #d00000;
@@ -41,30 +40,28 @@ nav {
 
 .toSanta {
   width: 290px;
-}  
+}
 
 .dashboard {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}  
+}
 
 .row {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}  
+}
 
-.btnwrapper{
+.btnwrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
-
-
 
 h1 {
   display: flex;
@@ -99,13 +96,13 @@ h5 {
 //Buttons
 button {
   display: inline-block;
-  padding: .75rem 1.25rem;
+  padding: 0.75rem 1.25rem;
   border-radius: 10rem;
   color: #fff;
   text-transform: uppercase;
   font-size: 1rem;
-  letter-spacing: .15rem;
-  transition: all .3s;
+  letter-spacing: 0.15rem;
+  transition: all 0.3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -128,7 +125,7 @@ button {
     width: 0%;
     height: 100%;
     background-color: darken($secondary-color, 15%);
-    transition: all .3s;
+    transition: all 0.3s;
     border-radius: 10rem;
     z-index: -1;
   }
@@ -142,13 +139,13 @@ button {
 
 .submit {
   display: inline-block;
-  padding: .75rem 1.25rem;
+  padding: 0.75rem 1.25rem;
   border-radius: 10rem;
   color: $secondary-color;
   text-transform: uppercase;
   font-size: 1rem;
-  letter-spacing: .15rem;
-  transition: all .3s;
+  letter-spacing: 0.15rem;
+  transition: all 0.3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -171,7 +168,7 @@ button {
     width: 0%;
     height: 100%;
     background-color: darken($secondary-color, 15%);
-    transition: all .3s;
+    transition: all 0.3s;
     border-radius: 10rem;
     z-index: -1;
   }
@@ -187,13 +184,13 @@ button {
 
 @keyframes moveInBottom {
   0% {
-      opacity: 0;
-      transform: translateY(30px);
+    opacity: 0;
+    transform: translateY(30px);
   }
 
   100% {
-      opacity: 1;
-      transform: translateY(0px);
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
 
@@ -243,7 +240,7 @@ button {
 }
 
 .hat-top:before {
-  content: "";
+  content: '';
   display: block;
   background: white;
   background: radial-gradient(at top, #ffffff 0%, #e4e4e4 100%);
@@ -339,8 +336,8 @@ button {
 }
 
 // boarder
-$globe-width:   12px;
-$globe-height:  28px;
+$globe-width: 12px;
+$globe-height: 28px;
 $globe-spacing: 40px;
 $globe-spread: 3px;
 $light-off-opacity: 0.4;
@@ -357,8 +354,8 @@ $light-off-opacity: 0.4;
   width: 100%;
   li {
     position: relative;
-    animation-fill-mode: both; 
-    animation-iteration-count:infinite;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -368,30 +365,33 @@ $light-off-opacity: 0.4;
     border-radius: 50%;
     margin: $globe-spacing/2;
     display: inline-block;
-    background: rgba(0,247,165,1);
-    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,247,165,1);
+    background: rgba(0, 247, 165, 1);
+    box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+      rgba(0, 247, 165, 1);
     animation-name: flash-1;
     animation-duration: 2s;
-    &:nth-child(2n+1) {
-      background: rgba(0,255,255,1);
-      box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,255,255,0.5);
+    &:nth-child(2n + 1) {
+      background: rgba(0, 255, 255, 1);
+      box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+        rgba(0, 255, 255, 0.5);
       animation-name: flash-2;
       animation-duration: 0.4s;
     }
-    &:nth-child(4n+2) {
-      background: rgba(247,0,148,1);
-      box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(247,0,148,1);
+    &:nth-child(4n + 2) {
+      background: rgba(247, 0, 148, 1);
+      box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+        rgba(247, 0, 148, 1);
       animation-name: flash-3;
       animation-duration: 1.1s;
     }
     &:nth-child(odd) {
       animation-duration: 1.8s;
     }
-    &:nth-child(3n+1) {
+    &:nth-child(3n + 1) {
       animation-duration: 1.4s;
     }
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       background: #222;
       width: ($globe-width - 2);
@@ -401,7 +401,7 @@ $light-off-opacity: 0.4;
       left: 1px;
     }
     &:after {
-      content: "";
+      content: '';
       top: (0 - $globe-height/2);
       left: $globe-width - 3;
       position: absolute;
@@ -418,21 +418,42 @@ $light-off-opacity: 0.4;
     }
   }
 }
-@keyframes flash-1 { 
-    0%, 100% { background: rgba(0,247,165,1);
-    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,247,165,1);} 
-    50% { background: rgba(0,247,165,$light-off-opacity);
-    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,247,165,0.2);}
+@keyframes flash-1 {
+  0%,
+  100% {
+    background: rgba(0, 247, 165, 1);
+    box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+      rgba(0, 247, 165, 1);
+  }
+  50% {
+    background: rgba(0, 247, 165, $light-off-opacity);
+    box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+      rgba(0, 247, 165, 0.2);
+  }
 }
-@keyframes flash-2 { 
-    0%, 100% { background: rgba(0,255,255,1);
-    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,255,255,1);} 
-    50% { background: rgba(0,255,255,$light-off-opacity);
-    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(0,255,255,0.2);}
+@keyframes flash-2 {
+  0%,
+  100% {
+    background: rgba(0, 255, 255, 1);
+    box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+      rgba(0, 255, 255, 1);
+  }
+  50% {
+    background: rgba(0, 255, 255, $light-off-opacity);
+    box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+      rgba(0, 255, 255, 0.2);
+  }
 }
-@keyframes flash-3 { 
-    0%, 100% { background: rgba(247,0,148,1);
-    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(247,0,148,1);} 
-    50% { background: rgba(247,0,148,$light-off-opacity);
-    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread rgba(247,0,148,0.2);}
+@keyframes flash-3 {
+  0%,
+  100% {
+    background: rgba(247, 0, 148, 1);
+    box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+      rgba(247, 0, 148, 1);
+  }
+  50% {
+    background: rgba(247, 0, 148, $light-off-opacity);
+    box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
+      rgba(247, 0, 148, 0.2);
+  }
 }
