--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,22 @@ nav {
   
 }
 
+.signup {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+label{
+  color: white
+}
+
+input {
+  border-radius: 5px;
+  border: none
+}
+
 .to {
   color: #d00000;
 }
@@ -97,7 +113,15 @@ h1 {
   align-items: center;
   justify-content: center;
   color: $light-color;
+  font-size: 80px;
+  text-shadow: 3px 3px #d00000;
+}
+
+.text{
+  color: $light-color;
+  text-shadow: 2px 2px #d00000;
   font-size: 60px;
+
 }
 
 h5 {
@@ -111,15 +135,32 @@ h5 {
 
 .SantaStyle1 {
   color: $secondary-color;
+  font-size: 30px;
 }
 
 .SantaStyle2 {
   color: $thirdary-color;
+  font-size: 20px;
 }
 
 .SantaButton {
   background-color: $secondary-color;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login {
+  margin-left: 20px;
+}
+
+.form-control {
+  margin-left: 10px;
+}
+
 
 //Buttons
 button {
@@ -152,7 +193,7 @@ button {
     left: 0;
     width: 0%;
     height: 100%;
-    background-color: darken($secondary-color, 15%);
+    background-color: darken($secondary-color, 6%);
     transition: all 0.3s;
     border-radius: 10rem;
     z-index: -1;
@@ -163,6 +204,12 @@ button {
       width: 100%;
     }
   }
+}
+
+.submitInput{
+  border-radius: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .submit {
@@ -207,6 +254,7 @@ button {
     }
   }
 }
+
 
 //Santa Stuff
 
@@ -484,4 +532,685 @@ $light-off-opacity: 0.4;
     box-shadow: 0px $globe-height/6 $globe-width * 2 $globe-spread
       rgba(247, 0, 148, 0.2);
   }
+}
+
+//Homepage Santa
+// HTML SCSSResult Skip Results Iframe
+// EDIT ON
+// .clearfix:after {
+//      visibility: hidden;
+//      display: block;
+//      font-size: 0;
+//      content: " ";
+//      clear: both;
+//      height: 0;
+//      }
+// .clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+// * html .clearfix { height: 1%; }
+// .clearfix { display: block; }
+/* close commented backslash hack */
+
+// html, body {
+//   height: 100%;
+//   width: 100%;
+// }
+// body {
+//   background: #FFF1C8;
+//   &:after {
+//     display: block;
+//     background: #E74700;
+//     height: 20%;
+//   }
+// }
+
+.main {
+  text-align: center;
+  width: 850px;
+  margin: 0 auto;
+}
+
+.santa {
+  float: right;
+  margin-right: 180px;
+}
+
+.face2 {
+  overflow: hidden;
+  background: #F1E6D9;
+  width: 200px;
+  height: 200px;
+  border-radius: 200px;
+  position: relative;
+  text-align: center;
+  z-index: 1;
+  .mouth {
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    background: #fff;
+    left: 0;
+    bottom: 0;
+    border-radius: 0 0 200px 200px;
+    .nose {
+      background: #F59699;
+      width: 16px;
+      height: 16px;
+      border-radius: 16px;
+      margin: auto;
+      left: 0;
+      right: 0;
+      top: -8px;
+      position: absolute;
+      
+    }
+    &:before, &:after {
+      content: '';
+      display: inline-block;
+      width: 70px;
+      height: 36px;
+      background: #F1E6D9;
+      
+    }
+    &:before {
+      border-radius: 70px 0;
+    }
+    &:after {
+      border-radius: 0 70px;
+    }
+  }
+}
+.eyes {
+  width: 140px;
+  height: 70px;
+  background: #F5D2B9;
+  border-radius: 140px 140px 0 0;
+  margin: 30px auto 0;
+  overflow: hidden;
+  font-size: 0;
+  .left, .right {
+    display: inline-block;
+    width: 50%;
+    height: 100%;
+    position: relative;
+    &:before {
+      content: '';
+      width: 60px;
+      height: 60px;
+      background: #F59699;
+      position: absolute;
+      bottom: -30px;
+      border-radius: 60px;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      width: 30px;
+      height: 15px;
+      background: #fff;
+      top: 20px;
+    }
+    span {
+      background: #0072CB;
+      width: 15px;
+      height: 15px;
+      display: block;
+      border-radius: 15px;
+      margin-top: 43px;
+    }
+  }
+  .left {
+    background: #F2C2A0;
+    &:before {
+      left: -30px;
+    }
+    &:after {
+      left: 27px;
+      border-radius: 36px 0;
+    }
+    span {
+      margin-left: 39px;
+    }
+  }
+  .right {
+    &:before {
+      right: -30px;
+    }
+    &:after {
+      right: 27px;
+      border-radius: 0 36px;
+    }
+    span {
+      margin-left: 16px;
+    }
+  }
+}
+
+.body {
+  width: 200px;
+  height: 250px;
+  background: #E74700;
+  border-radius: 200px;
+  z-index: -1;
+  position: relative;
+  top: -100px;
+  &:after {
+    content: '';
+    background: #F1E6D9;
+    width: 46px;
+    height: 46px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    top: 74px;
+  }
+}
+
+.left-hand {
+  width: 80px;
+  height: 50px;
+  border-bottom: 40px solid #E74700;
+  border-left: 40px solid #E74700;
+  border-bottom-left-radius: 200px;
+  position: absolute;
+  left: -90px;
+  top: -10px;
+}
+
+.right-hand {
+  background: #E74700;
+  width: 200px;
+  border-radius: 200px 200px 0 0;
+  left: 40px;
+  height: 120px;
+  position: relative;
+  top: 30px;
+}
+
+.left-hand, .right-hand {
+  &:before {
+    content: '';
+    background: #fff;
+    height: 20px;
+    display: block;
+    position: absolute;
+    width: 47px;
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 20px;
+    background: #F5D2B9;
+  }
+}
+
+.left-hand {
+  &:before {
+    left: -44px;
+    transform: rotate(-11deg);
+    top: -8px;
+  }
+  &:after {
+    left: -44px;
+    top: -28px;
+    transform: rotate(-11deg);
+    border-radius: 40px 40px 0 0;
+  }
+}
+
+.right-hand {
+  z-index: -1;
+  &:before {
+    right: 0px;
+    bottom: -10px;
+    width: 40px;
+  }
+  &:after {
+    right: 0px;
+    bottom: -30px;
+    border-radius: 0 0 40px 40px;
+  }
+}
+
+.cap {
+  width: 130px;
+  height: 50px;
+  background: #E74700;
+  border-radius: 100px 0;
+  position: relative;
+  top: 50px;
+  left: 70px;
+  &:before, &:after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 15px;
+    background: #fff;
+  }
+  &:before {
+    border-radius: 30px 0;
+    right: -30px;
+    top: -15px;
+  }
+  &:after {
+    border-radius: 0 30px;
+    right: -30px;
+    top: 0px;
+  }
+}
+
+.belt {
+  height: 35px;
+  background: #3A1200;
+  &:before, &:after {
+    content: '';
+    height: 35px;
+    width: 17px;
+    background: #E74700;
+    position: absolute;
+  }
+  &:before {
+    left: 35px;
+  }
+  &:after {
+    right: 35px;
+  }
+  .buckle {
+    box-sizing: border-box;
+    border: 10px solid #FFDF17;
+    width: 46px;
+    margin: 0 auto;
+    height: 35px;
+    display: inline-block;
+    position: relative;
+    &:after {
+      content: '';
+      height: 5px;
+      width: 15px;
+      display: block;
+      background: #FFDF17;
+      position: absolute;
+      right: -2px;
+      margin: auto;
+      top: 0;
+      bottom: 0;
+      border-radius: 5px;
+    }
+  }
+}
+
+.legs {
+  width: 46px;
+  height: 46px;
+  background: #165b33;
+  /* background: blue; */
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  &:before, &:after {
+    content: '';
+    background: #3A1200;
+    width: 23px;
+    height: 23px;
+    position: absolute;
+  }
+  &:before {
+    border-top-left-radius: 20px;
+    left: -23px;
+    bottom: 0;
+  }
+  &:after {
+    border-top-right-radius: 20px;
+    right: -23px;
+    bottom: 0;
+  }
+}
+
+.gift {
+  width: 130px;
+  height: 100px;
+  background: #0072CB;
+  position: relative;
+  left: 40px;
+  display: inline-block;
+  &:before {
+    content: '';
+    height: 30px;
+    display: block;
+    background: #0069B9;
+  }
+  .ribbon {
+    height: 100%;
+    width: 20px;
+    background: #E74700;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    &:before, &:after {
+      content: '';
+      width: 40px;
+      height: 20px;
+      background: #E74700;
+      position: absolute;
+      border-radius: 40px 0;
+      top: -20px;
+    }
+    &:before {
+      left: -30px;
+      border-radius: 0 40px;
+    }
+  }
+  &.orange {
+    background: #FFAC05;
+    height: 200px;
+    &:before {
+      background: #FF8D17;
+    }
+  }
+  &.purple {
+    background: #9B70FF;
+    height: 250px;
+    &:before {
+      background: #844EFF;
+    }
+  }
+}
+
+.gift-holder {
+  float: left;
+  position: absolute;
+  top: 380px;
+  .gift {
+    &:first-child {
+      left: 90px;
+      z-index: 1;
+    }
+    &:last-child {
+      left: -10px;
+    }
+  }
+}
+
+.text {
+  text-align: center;
+  font-family: 'Mountains of Christmas', cursive;
+  font-size: 50px;
+  position: relative;
+  top: -80px;
+  font-weight: bold;
+}
+
+// login page
+.snowmandiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.snowman .body2 {
+  width: 200px;
+  height: 200px;
+  background: #ecf0f1;
+  box-shadow: -13px -8px 0px rgba(0,0,0,0.1) inset;
+  border-radius: 50%;
+  margin-top: -100px;
+  position: absolute;
+  right:0;left:0;margin:0 auto;
+  margin-top:270px;
+}
+
+.snowman .body2:before {
+  width: 100px;
+  height: 100px;
+  background: #ecf0f1;
+  box-shadow: -5px 0px 0px rgba(0,0,0,0.1) inset;
+  border-radius: 50%;
+  display: inline-block;
+  content: "";
+  position: relative;
+  top: -191px;
+  left: 46px;
+  z-index:30;
+}
+
+.snowman .body2:after {
+  width: 160px;
+  height: 160px;
+  background: #ecf0f1;
+  box-shadow: -7px -5px 0px rgba(0,0,0,0.1) inset;
+  border-radius: 50%;
+  display: inline-block;
+  content: "";
+  position: relative;
+  top: -203px;
+  left: 20px;
+}
+
+.snowman .body2 .head2 {
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 8px 41px 8px 0;
+  border-color: transparent #FA9A20 transparent transparent;
+  content: "";
+  position: relative;
+  top: -229px;
+  display: inline-block;
+  left: -50px;
+  -webkit-transform: rotate(10deg);
+  -moz-transform: rotate(10deg);
+  transform: rotate(10deg);
+  box-shadow: 0px 43px rgba(0,0,0,0.2) inset;
+  z-index:30;
+}
+
+.snowman .body2 .head2:before {
+  content: "";
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #2c3e50;
+  display: inline-block;
+  position: absolute;
+  top: -23px;
+  left: 20px;
+}
+
+.snowman .body2 .head2:after {
+  content: "";
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #2c3e50;
+  display: inline-block;
+  position: absolute;
+  top: -26px;
+  left: 40px;
+}
+
+.scarf2 {
+  border-bottom: 21px solid rgb(243, 77, 77);
+  border-left: 18px solid transparent;
+  border-right: 29px solid transparent;
+  height: 0;
+  width: 104px;
+  position: absolute;
+  top: -101px;
+  z-index: 30;
+  left: 50px;
+  border-radius: 0px 100% 5px 10px;
+}
+
+.scarf2:after {
+  width: 74px;
+  height: 17px;
+  -webkit-transform: rotate(86deg);
+  -moz-transform: rotate(86deg);
+  transform: rotate(86deg);
+  background: rgb(243, 77, 77);
+  display: inline-block;
+  content: "";
+  position: absolute;
+  top: 34px;
+  left: 15px;
+  border-radius: 50% 0% 50% 50%;
+  box-shadow: -4px 0px rgba(0,0,0,0.1) inset;
+}
+.snowman .body2 .shadow2 {
+  background: rgba(0,0,0,0.2);
+  border-radius: 50%;
+  width: 190px;
+  height: 30px;
+  position: absolute;
+  bottom: -29px;
+  z-index: 1;
+  left: 30px;
+}
+.left-hand2 {
+  position: absolute;
+  top: -30px;
+  left: -7px;
+  -webkit-transform: rotate(15deg);
+  -moz-transform: rotate(15deg);
+  transform: rotate(15deg);
+  border-bottom: 6px solid rgba(151, 102, 13, 1);
+  border-left: 2px solid transparent;
+  border-right: 0 solid transparent;
+  height: 0;
+  width: 36px;
+}
+.left-hand2:before {
+  width: 81px;
+  left: -82px;
+  position: absolute;
+  content: "";
+  display: inline-block;
+  -webkit-transform: rotate(-12deg);
+  -moz-transform: rotate(-12deg);
+  transform: rotate(-12deg);
+  top: 8px;
+  border-bottom: 7px solid rgba(128, 84, 6, 1);
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  height: 0;
+  z-index:30;
+}
+.left-hand2:after {
+  width: 47px;
+  left: -88px;
+  position: absolute;
+  content: "";
+  display: inline-block;
+  -webkit-transform: rotate(17deg);
+  -moz-transform: rotate(17deg);
+  transform: rotate(17deg);
+  top: 3px;
+  border-bottom: 4px solid rgba(128, 84, 6, 1);
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  height: 0;
+  border-radius: 20px 50% 10% 20%;
+}
+
+.right-hand2 {
+  position: absolute;
+  top: -30px;
+  right: -37px;
+  -webkit-transform: rotate(-12deg);
+  -moz-transform: rotate(-12deg);
+  transform: rotate(-12deg);
+  border-bottom: 6px solid rgba(151, 102, 13, 1);
+  border-right: 2px solid transparent;
+  border-left: 0 solid transparent;
+  height: 0;
+  width: 66px;
+}
+.right-hand2:before {
+  width: 80px;
+  right: -82px;
+  position: absolute;
+  content: "";
+  display: inline-block;
+  -webkit-transform: rotate(10deg);
+  -moz-transform: rotate(10deg);
+  transform: rotate(10deg);
+  top: 7px;
+  border-bottom: 6px solid rgba(128, 84, 6, 1);
+  border-right: 3px solid transparent;
+  border-left: 3px solid transparent;
+  height: 0;
+  z-index: 30;
+}
+.right-hand2:after {
+  width: 47px;
+  right: -47px;
+  position: absolute;
+  content: "";
+  display: inline-block;
+  -webkit-transform: rotate(-16deg);
+  -moz-transform: rotate(-16deg);
+  transform: rotate(-16deg);
+  top: -6px;
+  border-bottom: 4px solid rgba(128, 84, 6, 1);
+  border-right: 3px solid transparent;
+  border-lrgy: 3px solid transparent;
+  height: 0;
+  border-radius: 20px 50% 10% 20%;
+}
+
+.snowman .hat2 {
+top: -253px;
+left: 76px;
+-webkit-transform: rotate(10deg);
+-moz-transform: rotate(10deg);
+transform: rotate(10deg);
+position: absolute;
+border-radius: 0;
+z-index: 20;
+border-top: 56px solid rgb(37, 37, 37);
+border-left: 10px solid transparent;
+border-right: 10px solid transparent;
+height: 0;
+width: 60px;
+border-bottom: 27px solid rgb(246, 62, 62);
+}
+
+.snowman .buttons2 {
+  height: 8px;
+  width: 8px;
+  background: #2c3e50;
+  position: absolute;
+  border-radius: 50%;
+  left: 60px;
+  top: -23px;
+  z-index: 30;
+}
+
+.snowman .buttons2:before {
+  height: 10px;
+  width: 10px;
+  background: #2c3e50;
+  position: absolute;
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+  top: -30px;
+  left: 5px;
+}
+
+.snowman .buttons2:after {
+  height: 6px;
+  width: 6px;
+  background: #2c3e50;
+  position: absolute;
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+  top: 30px;
+  left: 5px;
 }
