--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,43 +37,74 @@ nav {
 .recipeContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // flex-flow: column wrap;
+  padding: auto;
+  // align-items: center;
   width: 500px;
-  height: 300px;
+  height: 400px;
   margin: 0.5rem;
   font-size: medium;
-
-
+  font-family: 'Mountains of Christmas', cursive;
+  // align-content: space-around;
   border-style:solid;
   background-color: $thirdary-color;
   border-color:#ffff;
 }
+.recipeDetailsList {
+  // display: flex;
+
+  // align-content: space-around;
+  // align-self: center;
+}
+.recipeImgContainer {
+  // order: 1;
+  margin: 10px;
+  padding: 50px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 155px;
+  width: 155px;
+}
+
+.recipeListContainer {
+  // order: 2;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin: auto;
+}
 
 .recipeContainer h1 {
-  margin: 0;
-  font-size: medium;
+  margin: 10px;
+  font-size: x-large;
+  justify-items: right;
 }
 
 .cardContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  
+  flex-direction: row;
+  flex-wrap: wrap;
+  // flex-grow: 5;
+  justify-items: center;
+  align-content: center;
 }
 
 .signup {
-  display:flex;
+  display: lex;
   flex-direction: column;
   align-items: center;
   
 }
 .recipeImg {
-  max-height: 150px;
-  max-width: 150px;
-  justify-content: center;
-  align-items: center;
+  height: 150px;
+  width: 150px;
+  align-self: center;
+  justify-self: center;
+  // display: block;
+  // margin: auto;
 }
+
 
 label{
   color: white
@@ -875,6 +906,7 @@ $light-off-opacity: 0.4;
     bottom: 0;
   }
 }
+@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap');
 
 .gift {
   width: 130px;
