updated kid's dashboard

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ body {
 }
 
 letterTextarea {
-  background-color: #f6e6b4;
+  background-color: #fcebb9;
   color: #d00000;
   padding: 1em;
   font-family: Comic sans-serif;
@@ -1288,7 +1288,7 @@ $light-off-opacity: 0.4;
 }
 
 .medicoreColumn {
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(223, 217, 217);
   height: 300px;
   border-color: 165b33;
   border-radius: 10px;
@@ -1297,7 +1297,7 @@ $light-off-opacity: 0.4;
 
 .leastWantedColumn {
   //display: flex;
-  background-color: rgb(128, 69, 88);
+  background-color: rgb(255, 0, 76);
   height: 300px;
   border-color: 165b33;
   border-radius: 10px;
